cockroachlabs-preview-main/docs/v23.2/essential-metrics-advanced.mdx
---
title: "Essential Metrics for CockroachDB Advanced Deployments"
old_description: "Learn about the recommended essential metrics for monitoring your CockroachDB Advanced cluster."
---

These essential CockroachDB metrics enable you to build custom dashboards with the following tools:

- [Datadog integration](/docs/cockroachcloud/tools-page#monitor-cockroachdb-cloud-with-datadog) - The [**Datadog Integration Metric Name**](https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics) column lists the corresponding Datadog metric which requires the `crdb_dedicated.` prefix.
- [Metrics export](/docs/cockroachcloud/export-metrics-advanced)

The **Usage** column explains why each metric is important to visualize in a custom dashboard and how to make both practical and actionable use of the metric in a production deployment.

## Platform

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>sys.cpu.combined.percent-normalized</td><td>sys.cpu.combined.percent.normalized</td><td>Current user+system CPU percentage consumed by the CRDB process, normalized by number of cores</td><td>This metric gives the CPU utilization percentage by the CockroachDB process. If it is equal to 1 (or 100%), then the CPU is overloaded. The CockroachDB process should not be running with over 80% utilization for extended periods of time (hours). This metric is used in the DB Console <a href="/docs/v23.2/ui-hardware-dashboard#cpu-percent"><strong>CPU Percent</strong> graph</a>.</td></tr><tr><td>sys.cpu.host.combined.percent-normalized</td><td>NOT AVAILABLE</td><td>Current user+system CPU percentage consumed by all processes on the host OS, normalized by number of cores. If the CRDB process is run in a containerized environment, the host OS is the container since the CRDB process cannot inspect CPU usage beyond the container.</td><td>This metric gives the CPU utilization percentage of the underlying server, virtual server or container hosting the CockroachDB process. It includes CockroachDB process and non-CockroachDB process usage. If it is equal to 1 (or 100%), then the CPU is overloaded. The CockroachDB process should not be running in an environment with an overloaded state for extended periods of time (hours). This metric is used in the DB Console <strong>Host CPU Percent</strong> graph.</td></tr><tr><td>sys.cpu.user.percent</td><td>sys.cpu.user.percent</td><td>Current user CPU percentage consumed by the CRDB process</td><td>This metric gives the CPU usage percentage at the user level by the CockroachDB process only. This is similar to the Linux <code>top</code> command output. The metric value can be more than 1 (or 100%) on multi-core systems. It is best to combine user and system metrics.</td></tr><tr><td>sys.cpu.sys.percent</td><td>sys.cpu.sys.percent</td><td>Current system CPU percentage consumed by the CRDB process</td><td>This metric gives the CPU usage percentage at the system (Linux kernel) level by the CockroachDB process only. This is similar to the Linux <code>top</code> command output. The metric value can be more than 1 (or 100%) on multi-core systems. It is best to combine user and system metrics.</td></tr><tr><td>sys.rss</td><td>sys.rss</td><td>Current process memory (RSS)</td><td>This metric gives the amount of RAM used by the CockroachDB process. Persistently low values over an extended period of time suggest there is underutilized memory that can be put to work with adjusted <a href="/docs/v23.2/recommended-production-settings#cache-and-sql-memory-size">settings for <code>--cache</code> or <code>--max&#95;sql&#95;memory</code></a> or both. Conversely, a high utilization, even if a temporary spike, indicates an increased risk of <a href="/docs/v23.2/cluster-setup-troubleshooting#out-of-memory-oom-crash">Out-of-memory (OOM) crash</a> (particularly since the <a href="/docs/v23.2/recommended-production-settings#memory">swap is generally disabled</a>).</td></tr><tr><td>sql.mem.root.current</td><td>NOT AVAILABLE</td><td>Current sql statement memory usage for root</td><td>This metric shows how memory set aside for temporary materializations, such as hash tables and intermediary result sets, is utilized. Use this metric to optimize memory allocations based on long term observations. The maximum amount is set with <a href="/docs/v23.2/recommended-production-settings#cache-and-sql-memory-size"><code>--max&#95;sql&#95;memory</code></a>. If the utilization of sql memory is persistently low, perhaps some portion of this memory allocation can be shifted to <a href="/docs/v23.2/recommended-production-settings#cache-and-sql-memory-size"><code>--cache</code></a>.</td></tr><tr><td>sys.host.disk.write.bytes</td><td>NOT AVAILABLE</td><td>Bytes written to all disks since this process started</td><td>This metric reports the effective storage device write throughput (MB/s) rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td>sys.host.disk.write.count</td><td>NOT AVAILABLE</td><td>Disk write operations across all disks since this process started</td><td>This metric reports the effective storage device write IOPS rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td>sys.host.disk.read.bytes</td><td>NOT AVAILABLE</td><td>Bytes read from all disks since this process started</td><td>This metric reports the effective storage device read throughput (MB/s) rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td>sys.host.disk.read.count</td><td>NOT AVAILABLE</td><td>Disk read operations across all disks since this process started</td><td>This metric reports the effective storage device read IOPS rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td>sys.host.disk.iopsinprogress</td><td>NOT AVAILABLE</td><td>IO operations currently in progress on this host</td><td>This metric gives the average queue length of the storage device. It characterizes the storage device's performance capability. All I/O performance metrics are Linux counters and correspond to the <code>avgqu-sz</code> in the Linux <code>iostat</code> command output. You need to view the device queue graph in the context of the actual read/write IOPS and MBPS metrics that show the actual device utilization. If the device is not keeping up, the queue will grow. Values over 10 are bad. Values around 5 mean the device is working hard trying to keep up. For internal (on chassis) <a href="https://www.wikipedia.org/wiki/NVM_Express">NVMe</a> devices, the queue values are typically 0. For network connected devices, such as <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-volume-types">AWS EBS volumes</a>, the normal operating range of values is 1 to 2. Spikes in values are OK. They indicate an I/O spike where the device fell behind and then caught up. End users may experience inconsistent response times, but there should be no cluster stability issues. If the queue is greater than 5 for an extended period of time and IOPS or MBPS are low, then the storage is most likely not provisioned per Cockroach Labs guidance. In AWS EBS, it is commonly an EBS type, such as gp2, not suitable as database primary storage. If I/O is low and the queue is low, the most likely scenario is that the CPU is lacking and not driving I/O. One such case is a cluster with nodes with only 2 vcpus which is not supported <a href="/docs/v23.2/recommended-production-settings#sizing">sizing</a> for production deployments. There are quite a few background processes in the database that take CPU away from the workload, so the workload is just not getting the CPU. Review <a href="/docs/v23.2/common-issues-to-monitor#storage-and-disk-i-o">storage and disk I/O</a>.</td></tr><tr><td><a></a>sys.host.net.recv.bytes</td><td>sys.host.net.recv.bytes</td><td>Bytes received on all network interfaces since this process started</td><td>This metric gives the node's ingress/egress network transfer rates for flat sections which may indicate insufficiently provisioned networking or high error rates. CockroachDB is using a reliable TCP/IP protocol, so errors result in delivery retries that create a "slow network" effect.</td></tr><tr><td><a></a>sys.host.net.send.bytes</td><td>sys.host.net.send.bytes</td><td>Bytes sent on all network interfaces since this process started</td><td>This metric gives the node's ingress/egress network transfer rates for flat sections which may indicate insufficiently provisioned networking or high error rates. CockroachDB is using a reliable TCP/IP protocol, so errors result in delivery retries that create a "slow network" effect.</td></tr><tr><td>clock-offset.meannanos</td><td>clock.offset.meannanos</td><td>Mean clock offset with other nodes</td><td>This metric gives the node's clock skew. In a well-configured environment, the actual clock skew would be in the sub-millisecond range. A skew exceeding 5 ms is likely due to a NTP service mis-configuration. Reducing the actual clock skew reduces the probability of uncertainty related conflicts and corresponding retires which has a positive impact on workload performance. Conversely, a larger actual clock skew increases the probability of retries due to uncertainty conflicts, with potentially measurable adverse effects on workload performance.</td></tr></tbody></table>

## Storage

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>capacity</td><td>capacity</td><td>Total storage capacity</td><td>This metric gives total storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td>capacity.available</td><td>capacity.available</td><td>Available storage capacity</td><td>This metric gives available storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td>capacity.used</td><td>capacity.used</td><td>Used storage capacity</td><td>This metric gives used storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td>storage.write-stalls</td><td>NOT AVAILABLE</td><td>Number of instances of intentional write stalls to backpressure incoming writes</td><td>This metric reports actual disk stall events. Ideally, investigate all reports of disk stalls. As a pratical guideline, one stall per minute is not likely to have a material impact on workload beyond an occasional increase in response time. However one stall per second should be viewed as problematic and investigated actively. It is particularly problematic if the rate persists over an extended period of time, and worse, if it is increasing.</td></tr><tr><td>rocksdb.compactions</td><td>rocksdb.compactions.total</td><td>Number of SST compactions</td><td>This metric reports the number of a node's <a href="/docs/v23.2/common-issues-to-monitor#lsm-health">LSM compactions</a>. If the number of compactions remains elevated while the LSM health does not improve, compactions are not keeping up with the workload. If the condition persists for an extended period, the cluster will initially exhibit performance issues that will eventually escalate into stability issues.</td></tr><tr><td>rocksdb.block.cache.hits</td><td>rocksdb.block.cache.hits</td><td>Count of block cache hits</td><td>This metric gives hits to block cache which is reserved memory. It is allocated upon the start of a node process by the <a href="/docs/v23.2/cockroach-start#general"><code>--cache</code> flag</a> and never shrinks. By observing block cache hits and misses, you can fine-tune memory allocations in the node process for the demands of the workload.</td></tr><tr><td>rocksdb.block.cache.misses</td><td>rocksdb.block.cache.misses</td><td>Count of block cache misses</td><td>This metric gives misses to block cache which is reserved memory. It is allocated upon the start of a node process by the <a href="/docs/v23.2/cockroach-start#general"><code>--cache</code> flag</a> and never shrinks. By observing block cache hits and misses, you can fine-tune memory allocations in the node process for the demands of the workload.</td></tr></tbody></table>

## Health

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>sys.uptime</td><td>sys.uptime</td><td>Process uptime</td><td>This metric measures the length of time, in seconds, that the CockroachDB process has been running. Monitor this metric to detect events such as node restarts, which may require investigation or intervention.</td></tr><tr><td>admission.io.overload</td><td>NOT AVAILABLE</td><td>1-normalized float indicating whether IO admission control considers the store as overloaded with respect to compaction out of L0 (considers sub-level and file counts).</td><td>If the value of this metric exceeds 1, then it indicates overload. You can also look at the metrics <code>storage.l0-num-files</code>, <code>storage.l0-sublevels</code> or <code>rocksdb.read-amplification</code> directly. A healthy LSM shape is defined as “read-amp &lt; 20” and “L0-files &lt; 1000”, looking at <a href="/docs/v23.2/cluster-settings">cluster settings</a><code>admission.l0&#95;sub&#95;level&#95;count&#95;overload&#95;threshold</code> and <code>admission.l0&#95;file&#95;count&#95;overload&#95;threshold</code> respectively.</td></tr><tr><td>admission.wait&#95;durations.kv-p75</td><td>NOT AVAILABLE</td><td>Wait time durations for requests that waited</td><td>This metric shows if CPU utilization-based admission control feature is working effectively or potentially overaggressive. This is a latency histogram of how much delay was added to the workload due to throttling by CPU control. If observing over 100ms waits for over 5 seconds while there was excess CPU capacity available, then the admission control is overly aggressive.</td></tr><tr><td>admission.wait&#95;durations.kv-stores-p75</td><td>NOT AVAILABLE</td><td>Wait time durations for requests that waited</td><td>This metric shows if I/O utilization-based admission control feature is working effectively or potentially overaggressive. This is a latency histogram of how much delay was added to the workload due to throttling by I/O control. If observing over 100ms waits for over 5 seconds while there was excess I/O capacity available, then the admission control is overly aggressive.</td></tr><tr><td>sys.runnable.goroutines.per.cpu</td><td>NOT AVAILABLE</td><td>Average number of goroutines that are waiting to run, normalized by number of cores</td><td>If this metric has a value over 30, it indicates a CPU overload. If the condition lasts a short period of time (a few seconds), the database users are likely to experience inconsistent response times. If the condition persists for an extended period of time (tens of seconds, or minutes) the cluster may start developing stability issues. Review <a href="/docs/v23.2/common-issues-to-monitor#cpu">CPU planning</a>.</td></tr></tbody></table>

## KV distributed

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>liveness.heartbeatlatency</td><td>liveness.heartbeatlatency</td><td>Node liveness heartbeat latency</td><td>If this metric exceeds 1 second, it is a sign of cluster instability.</td></tr><tr><td>liveness.livenodes</td><td>liveness.livenodes</td><td>Number of live nodes in the cluster (will be 0 if this node is not itself live)</td><td>This is a critical metric that tracks the live nodes in the cluster.</td></tr><tr><td>distsender.rpc.sent.nextreplicaerror</td><td>distsender.rpc.sent.nextreplicaerror</td><td>Number of replica-addressed RPCs sent due to per-replica errors</td><td><a href="/docs/v23.2/architecture/overview#overview">RPC</a> errors do not necessarily indicate a problem. This metric tracks remote procedure calls that return a status value other than "success". A non-success status of an RPC should not be misconstrued as a network transport issue. It is database code logic executed on another cluster node. The non-success status is a result of an orderly execution of an RPC that reports a specific logical condition.</td></tr><tr><td>distsender.errors.notleaseholder</td><td>distsender.errors.notleaseholder</td><td>Number of NotLeaseHolderErrors encountered from replica-addressed RPCs</td><td>Errors of this type are normal during elastic cluster topology changes when leaseholders are actively rebalancing. They are automatically retried. However they may create occasional response time spikes. In that case, this metric may provide the explanation of the cause.</td></tr></tbody></table>

## KV replication

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>leases.transfers.success</td><td>leases.transfers.success</td><td>Number of successful lease transfers</td><td>A high number of <a href="/docs/v23.2/architecture/replication-layer#leases">lease</a> transfers is not a negative or positive signal, rather it is a reflection of the elastic cluster activities. For example, this metric is high during cluster topology changes. A high value is often the reason for NotLeaseHolderErrors which are normal and expected during rebalancing. Observing this metric may provide a confirmation of the cause of such errors.</td></tr><tr><td>rebalancing.queriespersecond</td><td>NOT AVAILABLE</td><td>Number of kv-level requests received per second by the store, considering the last 30 minutes, as used in rebalancing decisions.</td><td>This metric shows hotspots along the queries per second (QPS) dimension. It provides insights into the ongoing rebalancing activities.</td></tr><tr><td>ranges</td><td>ranges</td><td>Number of ranges</td><td>This metric provides a measure of the scale of the data size.</td></tr><tr><td>replicas</td><td>replicas</td><td>Number of replicas</td><td>This metric provides an essential characterization of the data distribution across cluster nodes.</td></tr><tr><td>replicas.leaseholders</td><td>replicas.leaseholders</td><td>Number of lease holders</td><td>This metric provides an essential characterization of the data processing points across cluster nodes.</td></tr><tr><td>ranges.underreplicated</td><td>ranges.underreplicated</td><td>Number of ranges with fewer live replicas than the replication target</td><td>This metric is an indicator of <a href="/docs/v23.2/cluster-setup-troubleshooting#replication-issues">replication issues</a>. It shows whether the cluster has data that is not conforming to resilience goals. The next step is to determine the corresponding database object, such as the table or index, of these under-replicated ranges and whether the under-replication is temporarily expected. Use the statement <code>SELECT table&#95;name, index&#95;name FROM &#91;SHOW RANGES WITH INDEXES&#93; WHERE range&#95;id = &#123;id of under-replicated range&#125;;</code></td></tr><tr><td>ranges.unavailable</td><td>ranges.unavailable</td><td>Number of ranges with fewer live replicas than needed for quorum</td><td>This metric is an indicator of <a href="/docs/v23.2/cluster-setup-troubleshooting#replication-issues">replication issues</a>. It shows whether the cluster is unhealthy and can impact workload. If an entire range is unavailable, then it will be unable to process queries.</td></tr><tr><td>queue.replicate.replacedecommissioningreplica.error</td><td>NOT AVAILABLE</td><td>Number of failed decommissioning replica replacements processed by the replicate queue</td><td>Refer to <a href="/docs/v23.2/node-shutdown?filters=decommission#decommission-the-node">Decommission the node</a>.</td></tr><tr><td>range.splits</td><td>range.splits</td><td>Number of range splits</td><td>This metric indicates how fast a workload is scaling up. Spikes can indicate resource hot spots since the <a href="/docs/v23.2/load-based-splitting#control-load-based-splitting-threshold">split heuristic is based on QPS</a>. To understand whether hot spots are an issue and with which tables and indexes they are occurring, correlate this metric with other metrics such as CPU usage, such as <code>sys.cpu.combined.percent-normalized</code>, or use the <a href="/docs/v23.2/ui-hot-ranges-page"><strong>Hot Ranges</strong> page</a>.</td></tr><tr><td>range.merges</td><td>NOT AVAILABLE</td><td>Number of range merges</td><td>This metric indicates how fast a workload is scaling down. Merges are Cockroach's <a href="/docs/v23.2/architecture/distribution-layer#range-merges">optimization for performance</a>. This metric indicates that there have been deletes in the workload.</td></tr></tbody></table>

## SQL

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>sql.conns</td><td>sql.conns</td><td>Number of active SQL connections</td><td>This metric shows the number of connections as well as the distribution, or balancing, of connections across cluster nodes. An imbalance can lead to nodes becoming overloaded. Review <a href="/docs/v23.2/connection-pooling">Connection Pooling</a>.</td></tr><tr><td>sql.new&#95;conns</td><td>NOT AVAILABLE</td><td>Number of new connection attempts.</td><td>The rate of this metric shows how frequently new connections are being established. This can be useful in determining if a high rate of incoming new connections is causing additional load on the server due to a misconfigured application.</td></tr><tr><td>sql.txns.open</td><td>sql.txns.open</td><td>Number of currently open user SQL transactions</td><td>This metric should roughly correspond to the number of cores &#42; 4. If this metric is consistently larger, scale out the cluster.</td></tr><tr><td>sql.statements.active</td><td>sql.statements.active</td><td>Number of currently active user SQL statements</td><td>This high-level metric reflects workload volume.</td></tr><tr><td>sql.failure.count</td><td>sql.failure.count</td><td>Number of statements resulting in a planning or runtime error</td><td>This metric is a high-level indicator of workload and application degradation with query failures. Use the <a href="/docs/v23.2/ui-insights-page">Insights page</a> to find failed executions with their error code to troubleshoot or use application-level logs, if instrumented, to determine the cause of error.</td></tr><tr><td>sql.full.scan.count</td><td>sql.full.scan.count</td><td>Number of full table or index scans</td><td>This metric is a high-level indicator of potentially suboptimal query plans in the workload that may require index tuning and maintenance. To identify the <a href="/docs/v23.2/performance-recipes#statements-with-full-table-scans">statements with a full table scan</a>, use <code>SHOW FULL TABLE SCAN</code> or the <a href="/docs/v23.2/ui-statements-page"><strong>SQL Activity Statements</strong> page</a> with the corresponding metric time frame. The <strong>Statements</strong> page also includes <a href="/docs/v23.2/ui-statements-page#explain-plans">explain plans</a> and <a href="/docs/v23.2/ui-statements-page#insights">index recommendations</a>. Not all full scans are necessarily bad especially over smaller tables.</td></tr><tr><td>sql.insert.count</td><td>sql.insert.count</td><td>Number of SQL INSERT statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. For example, on the <a href="/docs/v23.2/ui-transactions-page"><strong>Transactions</strong> page</a> and the <a href="/docs/v23.2/ui-statements-page"><strong>Statements</strong> page</a>, sort on the Execution Count column. To find problematic sessions, on the <a href="/docs/v23.2/ui-sessions-page"><strong>Sessions</strong> page</a>, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td>sql.update.count</td><td>sql.update.count</td><td>Number of SQL UPDATE statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. For example, on the <a href="/docs/v23.2/ui-transactions-page"><strong>Transactions</strong> page</a> and the <a href="/docs/v23.2/ui-statements-page"><strong>Statements</strong> page</a>, sort on the Execution Count column. To find problematic sessions, on the <a href="/docs/v23.2/ui-sessions-page"><strong>Sessions</strong> page</a>, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td>sql.delete.count</td><td>sql.delete.count</td><td>Number of SQL DELETE statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. For example, on the <a href="/docs/v23.2/ui-transactions-page"><strong>Transactions</strong> page</a> and the <a href="/docs/v23.2/ui-statements-page"><strong>Statements</strong> page</a>, sort on the Execution Count column. To find problematic sessions, on the <a href="/docs/v23.2/ui-sessions-page"><strong>Sessions</strong> page</a>, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td>sql.select.count</td><td>sql.select.count</td><td>Number of SQL SELECT statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. For example, on the <a href="/docs/v23.2/ui-transactions-page"><strong>Transactions</strong> page</a> and the <a href="/docs/v23.2/ui-statements-page"><strong>Statements</strong> page</a>, sort on the Execution Count column. To find problematic sessions, on the <a href="/docs/v23.2/ui-sessions-page"><strong>Sessions</strong> page</a>, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td>sql.ddl.count</td><td>sql.ddl.count</td><td>Number of SQL DDL statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. For example, on the <a href="/docs/v23.2/ui-transactions-page"><strong>Transactions</strong> page</a> and the <a href="/docs/v23.2/ui-statements-page"><strong>Statements</strong> page</a>, sort on the Execution Count column. To find problematic sessions, on the <a href="/docs/v23.2/ui-sessions-page"><strong>Sessions</strong> page</a>, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td>sql.txn.begin.count</td><td>sql.txn.begin.count</td><td>Number of SQL transaction BEGIN statements successfully executed</td><td>This metric reflects workload volume by counting explicit <a href="/docs/v23.2/transactions">transactions</a>. Use this metric to determine whether explicit transactions can be refactored as implicit transactions (individual statements).</td></tr><tr><td>sql.txn.commit.count</td><td>sql.txn.commit.count</td><td>Number of SQL transaction COMMIT statements successfully executed</td><td>This metric shows the number of <a href="/docs/v23.2/transactions">transactions</a> that completed successfully. This metric can be used as a proxy to measure the number of successful explicit transactions.</td></tr><tr><td>sql.txn.rollback.count</td><td>sql.txn.rollback.count</td><td>Number of SQL transaction ROLLBACK statements successfully executed</td><td>This metric shows the number of orderly transaction <a href="/docs/v23.2/rollback-transaction">rollbacks</a>. A persistently high number of rollbacks may negatively impact the workload performance and needs to be investigated.</td></tr><tr><td>sql.txn.abort.count</td><td>sql.txn.abort.count</td><td>Number of SQL transaction abort errors</td><td>This high-level metric reflects workload performance. A persistently high number of SQL transaction abort errors may negatively impact the workload performance and needs to be investigated.</td></tr><tr><td>sql.service.latency-p90, sql.service.latency-p99</td><td>sql.service.latency</td><td>Latency of SQL request execution</td><td>These high-level metrics reflect workload performance. Monitor these metrics to understand latency over time. If abnormal patterns emerge, apply the metric's time range to the <a href="/docs/v23.2/monitoring-and-alerting#sql-activity-pages"><strong>SQL Activity</strong> pages</a> to investigate interesting outliers or patterns. The <a href="/docs/v23.2/ui-statements-page"><strong>Statements page</strong></a> has P90 Latency and P99 latency columns to enable correlation with this metric.</td></tr><tr><td>sql.txn.latency-p90, sql.txn.latency-p99</td><td>sql.txn.latency</td><td>Latency of SQL transactions</td><td>These high-level metrics provide a latency histogram of all executed SQL transactions. These metrics provide an overview of the current SQL workload.</td></tr><tr><td>txnwaitqueue.deadlocks&#95;total</td><td>NOT AVAILABLE</td><td>Number of deadlocks detected by the transaction wait queue</td><td>Alert on this metric if its value is greater than zero, especially if transaction throughput is lower than expected. Applications should be able to detect and recover from deadlock errors. However, transaction performance and throughput can be maximized if the application logic avoids deadlock conditions in the first place, for example, by keeping transactions as short as possible.</td></tr><tr><td>sql.distsql.contended&#95;queries.count</td><td>sql.distsql.contended.queries</td><td>Number of SQL queries that experienced contention</td><td>This metric is incremented whenever there is a non-trivial amount of contention experienced by a statement whether read-write or write-write conflicts. Monitor this metric to correlate possible workload performance issues to contention conflicts.</td></tr><tr><td><a></a>sql.conn.failures</td><td>sql.conn.failures.count</td><td>Number of SQL connection failures</td><td>This metric is incremented whenever a connection attempt fails for any reason, including timeouts.</td></tr><tr><td><a></a>sql.conn.latency-p90, sql.conn.latency-p99</td><td>sql.conn.latency</td><td>Latency to establish and authenticate a SQL connection</td><td>These metrics characterize the database connection latency which can affect the application performance, for example, by having slow startup times. Connection failures are not recorded in these metrics.</td></tr><tr><td>txn.restarts.serializable</td><td>txn.restarts.serializable</td><td>Number of restarts due to a forwarded commit timestamp and isolation=SERIALIZABLE</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review <a href="/docs/v23.2/performance-best-practices-overview#transaction-contention">transaction contention best practices</a> and <a href="/docs/v23.2/performance-recipes#transaction-contention">performance tuning recipes</a>. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td>txn.restarts.writetooold</td><td>txn.restarts.writetooold</td><td>Number of restarts due to a concurrent writer committing first</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review <a href="/docs/v23.2/performance-best-practices-overview#transaction-contention">transaction contention best practices</a> and <a href="/docs/v23.2/performance-recipes#transaction-contention">performance tuning recipes</a>. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td>txn.restarts.writetoooldmulti</td><td>NOT AVAILABLE</td><td>Number of restarts due to multiple concurrent writers committing first</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review <a href="/docs/v23.2/performance-best-practices-overview#transaction-contention">transaction contention best practices</a> and <a href="/docs/v23.2/performance-recipes#transaction-contention">performance tuning recipes</a>. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td>txn.restarts.unknown</td><td>NOT AVAILABLE</td><td>Number of restarts due to a unknown reasons</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review <a href="/docs/v23.2/performance-best-practices-overview#transaction-contention">transaction contention best practices</a> and <a href="/docs/v23.2/performance-recipes#transaction-contention">performance tuning recipes</a>. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td>txn.restarts.txnpush</td><td>NOT AVAILABLE</td><td>Number of restarts due to a transaction push failure</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review <a href="/docs/v23.2/performance-best-practices-overview#transaction-contention">transaction contention best practices</a> and <a href="/docs/v23.2/performance-recipes#transaction-contention">performance tuning recipes</a>. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td>txn.restarts.txnaborted</td><td>NOT AVAILABLE</td><td>Number of restarts due to an abort by a concurrent transaction</td><td>The errors tracked by this metric are generally due to deadlocks. Deadlocks can often be prevented with a considered transaction design. Identify the conflicting transactions involved in the deadlocks, then, if possible, redesign the business logic implementation prone to deadlocks.</td></tr></tbody></table>

## Table Statistics

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>jobs.auto&#95;create&#95;stats.resume&#95;failed</td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;stats jobs which failed with a non-retryable error</td><td>This metric is a high-level indicator that automatically generated <a href="/docs/v23.2/cost-based-optimizer#table-statistics">table statistics</a> is failing. Failed statistic creation can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td>jobs.auto&#95;create&#95;stats.currently&#95;running</td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;stats jobs currently running</td><td>This metric tracks the number of active automatically generated statistics jobs that could also be consuming resources. Ensure that foreground SQL traffic is not impacted by correlating this metric with SQL latency and query volume metrics.</td></tr><tr><td>jobs.auto&#95;create&#95;stats.currently&#95;paused</td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;stats jobs currently considered Paused</td><td>This metric is a high-level indicator that automatically generated statistics jobs are paused which can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td>jobs.create&#95;stats.currently&#95;running</td><td>NOT AVAILABLE</td><td>Number of create&#95;stats jobs currently running</td><td>This metric tracks the number of active create statistics jobs that may be consuming resources. Ensure that foreground SQL traffic is not impacted by correlating this metric with SQL latency and query volume metrics.</td></tr></tbody></table>

## Backup and Restore

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>jobs.backup.currently&#95;running</td><td>NOT AVAILABLE</td><td>Number of backup jobs currently running</td><td>See Description.</td></tr><tr><td>jobs.backup.currently&#95;paused</td><td>NOT AVAILABLE</td><td>Number of backup jobs currently considered Paused</td><td>Monitor and alert on this metric to safeguard against an inadvertent operational error of leaving a backup job in a paused state for an extended period of time. In functional areas, a paused job can hold resources or have concurrency impact or some other negative consequence. Paused backup may break the <a href="/docs/v23.2/backup#performance">recovery point objective (RPO)</a>.</td></tr><tr><td>schedules.BACKUP.failed</td><td>NOT AVAILABLE</td><td>Number of BACKUP jobs failed</td><td>Monitor this metric and investigate backup job failures.</td></tr><tr><td>schedules.BACKUP.last-completed-time</td><td>NOT AVAILABLE</td><td>The unix timestamp of the most recently completed backup by a schedule specified as maintaining this metric</td><td>Monitor this metric to know that backups are meeting the <a href="/docs/v23.2/backup#performance">recovery point objective (RPO)</a>.</td></tr></tbody></table>

## Changefeeds

If [changefeeds](/docs/v23.2/change-data-capture-overview) are created in a CockroachDB cluster, monitor these additional metrics in your custom dashboards:

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>changefeed.running</td><td>changefeed.running</td><td>Number of currently running changefeeds, including sinkless</td><td>This metric tracks the total number of all running changefeeds.</td></tr><tr><td>jobs.changefeed.currently&#95;paused</td><td>NOT AVAILABLE</td><td>Number of changefeed jobs currently considered Paused</td><td>Monitor and alert on this metric to safeguard against an inadvertent operational error of leaving a changefeed job in a paused state for an extended period of time. Changefeed jobs should not be paused for a long time because the <a href="/docs/v23.2/monitor-and-debug-changefeeds#protected-timestamp-and-garbage-collection-monitoring">protected timestamp prevents garbage collection</a>.</td></tr><tr><td>changefeed.failures</td><td>changefeed.failures</td><td>Total number of changefeed jobs which have failed</td><td>This metric tracks the permanent changefeed job failures that the jobs system will not try to restart. Any increase in this counter should be investigated. An alert on this metric is recommended.</td></tr><tr><td>changefeed.error&#95;retries</td><td>changefeed.error.retries</td><td>Total retryable errors encountered by all changefeeds</td><td>This metric tracks transient changefeed errors. Alert on "too many" errors, such as 50 retries in 15 minutes. For example, during a rolling upgrade this counter will increase because the changefeed jobs will restart following node restarts. There is an exponential backoff, up to 10 minutes. But if there is no rolling upgrade in process or other cluster maintenance, and the error rate is high, investigate the changefeed job.</td></tr><tr><td>changefeed.emitted&#95;messages</td><td>changefeed.emitted.messages</td><td>Messages emitted by all feeds</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the rate of changes being streamed from the CockroachDB cluster.</td></tr><tr><td>changefeed.emitted&#95;bytes</td><td>NOT AVAILABLE</td><td>Bytes emitted by all feeds</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the throughput bytes being streamed from the CockroachDB cluster.</td></tr><tr><td>changefeed.commit&#95;latency</td><td>changefeed.commit.latency</td><td>The difference between the event MVCC timestamp and the time it was acknowledged by the downstream sink. If the sink batches events, then the difference between the oldest event in the batch and acknowledgement is recorded. Latency during backfill is excluded.</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the end-to-end lag between a committed change and that change applied at the destination.</td></tr><tr><td>jobs.changefeed.protected&#95;age&#95;sec</td><td>NOT AVAILABLE</td><td>The age of the oldest PTS record protected by changefeed jobs</td><td><a href="/docs/v23.2/monitor-and-debug-changefeeds#protected-timestamp-and-garbage-collection-monitoring">Changefeeds use protected timestamps to protect the data from being garbage collected</a>. Ensure the protected timestamp age does not significantly exceed the <a href="/docs/v23.2/configure-replication-zones#replication-zone-variables">GC TTL zone configuration</a>. Alert on this metric if the protected timestamp age is greater than 3 times the GC TTL.</td></tr></tbody></table>

## Row-Level TTL

If [Row-Level TTL](/docs/v23.2/row-level-ttl) is configured for any table in a CockroachDB cluster, monitor these additional metrics in your custom dashboards:

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb_dedicated#metrics">Datadog Integration Metric Name</a><br/>(add <code>crdb&#95;dedicated.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td>jobs.row&#95;level&#95;ttl.resume&#95;completed</td><td>NOT AVAILABLE</td><td>Number of row&#95;level&#95;ttl jobs which successfully resumed to completion</td><td>If Row Level TTL is enabled, this metric should be nonzero and correspond to the <code>ttl&#95;cron</code> setting that was chosen. If this metric is zero, it means the job is not running</td></tr><tr><td>jobs.row&#95;level&#95;ttl.resume&#95;failed</td><td>NOT AVAILABLE</td><td>Number of row&#95;level&#95;ttl jobs which failed with a non-retryable error</td><td>This metric should remain at zero. Repeated errors means the Row Level TTL job is not deleting data.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.rows&#95;selected</td><td>NOT AVAILABLE</td><td>Number of rows selected for deletion by the row level TTL job.</td><td>Correlate this metric with the metric <code>jobs.row&#95;level&#95;ttl.rows&#95;deleted</code> to ensure all the rows that should be deleted are actually getting deleted.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.rows&#95;deleted</td><td>NOT AVAILABLE</td><td>Number of rows deleted by the row level TTL job.</td><td>Correlate this metric with the metric <code>jobs.row&#95;level&#95;ttl.rows&#95;selected</code> to ensure all the rows that should be deleted are actually getting deleted.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.currently&#95;paused</td><td>NOT AVAILABLE</td><td>Number of row&#95;level&#95;ttl jobs currently considered Paused</td><td>Monitor this metric to ensure the Row Level TTL job does not remain paused inadvertently for an extended period.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.currently&#95;running</td><td>NOT AVAILABLE</td><td>Number of row&#95;level&#95;ttl jobs currently running</td><td>Monitor this metric to ensure there are not too many Row Level TTL jobs running at the same time. Generally, this metric should be in the low single digits.</td></tr><tr><td>schedules.scheduled-row-level-ttl-executor.failed</td><td>NOT AVAILABLE</td><td>Number of scheduled-row-level-ttl-executor jobs failed</td><td>Monitor this metric to ensure the Row Level TTL job is running. If it is non-zero, it means the job could not be created.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.span&#95;total&#95;duration</td><td>NOT AVAILABLE</td><td>Duration for processing a span during row level TTL.</td><td>See Description.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.select&#95;duration</td><td>NOT AVAILABLE</td><td>Duration for select requests during row level TTL.</td><td>See Description.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.delete&#95;duration</td><td>NOT AVAILABLE</td><td>Duration for delete requests during row level TTL.</td><td>See Description.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.num&#95;active&#95;spans</td><td>NOT AVAILABLE</td><td>Number of active spans the TTL job is deleting from.</td><td>See Description.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.total&#95;rows</td><td>NOT AVAILABLE</td><td>Approximate number of rows on the TTL table.</td><td>See Description.</td></tr><tr><td>jobs.row&#95;level&#95;ttl.total&#95;expired&#95;rows</td><td>NOT AVAILABLE</td><td>Approximate number of rows that have expired the TTL on the TTL table.</td><td>See Description.</td></tr></tbody></table>

## See also

- [Available Metrics](/docs/v23.2/metrics#available-metrics)
- [Monitor CockroachDB with Prometheus](/docs/v23.2/monitor-cockroachdb-with-prometheus)
- [Visualize metrics in Grafana](/docs/v23.2/monitor-cockroachdb-with-prometheus#step-5-visualize-metrics-in-grafana)
- [Custom Chart Debug Page](/docs/v23.2/ui-custom-chart-debug-page)
- [Cluster API](/docs/v23.2/cluster-api)
- [Events to alert on](/docs/v23.2/monitoring-and-alerting#events-to-alert-on)
- [CockroachDB Source Code - DB Console metrics to graphs mappings (in *.tsx files)](https://github.com/cockroachdb/cockroach/tree/master/pkg/ui/workspaces/db-console/src/views/cluster/containers/nodeGraphs/dashboards)
